--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -193,7 +193,7 @@
         outline: none;
       }
       &:disabled {
-        background: #8888d5;
+        background: @color-medium-grey;
       }
     }
 
@@ -273,6 +273,14 @@
 
     @media (max-width: @screen-xs) {
       margin-top: 12px;
+      position: absolute;
+      bottom: 38px;
+      left: 0;
+      right: 0;
+    }
+
+    a{
+      color: @color-main-purple;
     }
 
     button {
