--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -2,6 +2,7 @@
 
 @table-width: 846px;
 .wallet-page {
+  position: relative;
   max-width: @table-width;
   margin: 0 auto;
   @media (max-width: @screen-xs) {
