case #10373 and personalize

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -138,12 +138,12 @@
       border-radius: 26.5px;
       border: solid 1px @color-main-purple;
       font-size: 18px;
-      color: @color-main-purple;
+      background: @color-main-purple;
       outline: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: @color-main-purple;
+      color: white;
       letter-spacing: -0.5px;
       padding: 0 20px;
       width: 100%;
