header signin buttons design changes

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -138,12 +138,11 @@
       border-radius: 26.5px;
       border: solid 1px @color-main-purple;
       font-size: 18px;
-      background: @color-main-purple;
       outline: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
+      color: @color-main-purple;
       letter-spacing: -0.5px;
       padding: 0 20px;
       width: 100%;
@@ -152,6 +151,8 @@
         display: none;
       }
       &:first-child {
+        background: @color-main-purple;
+        color: @color-white;
         margin-right: 24px;
       }
 
