Cleaned up the done TODOs

--- a/Cloudents.Web/ClientApp/components/preview/flashcardHeader.less
+++ b/Cloudents.Web/ClientApp/components/preview/flashcardHeader.less
@@ -27,9 +27,7 @@
         left: 0;
         right: 0;
         z-index: 1;
-        //background: @backgroundColor; // TODO: Irena -fix
-        background: @Site-Background // TODO: Irena -fix
-        //padding-bottom: 25px;
+        background: @Site-Background;
     }
 
     .card-sides {
@@ -207,39 +205,6 @@
                 }
             }
         }
-        /* TODO: Irena - stopped here
-    .progress-wrapper, .card-sides, .pinned-counter {
-        @media(min-width: 600px) {
-            padding-bottom: 12px;
-        }
-    }
-
-    .pinned-counter {
-        .displayFlex;
-        .align-items(flex-start);
-        margin-right: 15px;
-
-        @media(max-width: 600px) {
-            display: none;
-        }
-
-        .num {
-            font-size: 32px;
-            line-height: 32px;
-        }
-
-        .icon {
-            text-align: center;
-            font-size: 12px;
-
-            md-icon {
-                width: 30px;
-                height: 30px;
-                fill: @pinColor;
-                margin-bottom: 5px;
-            }
-        }
-    }*/
     }
 }
 
