--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -229,7 +229,7 @@
 
 // Size constants
 @navBarHeightMdAndUp: 104px;
-@mainNavHeightXsOnly: 120px; //TODO: fix to actual size (seperated from the verticals bar)
+@mainNavHeightXsOnly: 120px;
 @mainNavHeightSmAndUp: 60px;
 //@navBarHeightMobile: 96px;
 @resultsFilterWidth: 192px;
