--- a/Cloudents.Web/ClientApp/components/preview/flashcard.less
+++ b/Cloudents.Web/ClientApp/components/preview/flashcard.less
@@ -189,9 +189,9 @@
         }
 
         button[disabled] {
-            border-color: @color-medium-grey; // TODO: irena- fix to actual color
+            border-color: @color-medium-grey;
             i {
-                color: @color-medium-grey; // TODO: irena- fix to actual color
+                color: @color-medium-grey;
                 margin: 0;
             }
         }
@@ -414,13 +414,13 @@
         h4 {
             margin: 10px 0;
             font-weight: normal;
-            color: @color-grey; // TODO: Irena - fix to actual color
+            color: @color-grey;
             font-size: 14px;
         }
 
         .subtitle {
             display: block;
-            color: @color-grey; // TODO: Irena - fix to actual color
+            color: @color-grey;
             .inTheMiddle;
             font-size: 16px;
             font-weight: bold;
@@ -507,88 +507,6 @@
                 }
             }
         }
-        /*
-        .like-wrapper {
-            position: absolute;
-            bottom: 10px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            //color: @textColorGrey;// TODO: Irena - fix
-            font-size: 16px;
-
-            @media(max-width: @screen-xs) {
-                font-size: 14px;
-            }
-
-            span {
-                font-weight: bold;
-            }
-            md-icon {// TODO: Irena - fix
-                width: 20px;
-                height: 21px;
-                fill: @textColorGrey;
-                margin-bottom: 2px;
-                margin-right: 5px;
-
-                @media(max-width: 600px) {
-                    width: 18px;
-                    height: 18px;
-                }
-            }
-
-            .liked {
-                background: @buttonColorBlue;
-                color: @textColorWhite;
-                border-color: @buttonColorBlue;
-
-                md-icon {
-                    fill: @textColorWhite;
-                }
-            }
-            button {
-                //border: 1px solid @textColorGrey; // TODO: Irena - fix
-                border-radius: 5px;
-                margin-left: 10px;
-                padding: 0 10px;
-
-                @media(max-width: @screen-xs) {
-                    padding: 0 6px;
-                    margin-left: 4px;
-                }
-
-                > div {
-                    margin-top: 2px;
-                }
-            }
-        }
-
-        .like-wrapper, .like-wrapper button > div {
-            .inTheMiddle;
-        }
-        */
-
-        /*.share-btn { // TODO: Irena - fix
-            position: absolute;
-            top: 0;
-            right: 0;
-            color: @buttonColorBlue;
-            font-weight: bold;
-            font-size: 16px;
-
-            > div {
-                .displayFlex;
-                .align-items(center);
-                .justifyContet(center);
-            }
-
-            md-icon {
-                width: 22px;
-                height: 22px;
-                margin-right: 4px;
-                fill: @buttonColorBlue;
-            }
-        }*/
     }
 
     .card-player {
@@ -715,7 +633,7 @@
                 .card-style;
 
                 .front {
-                    border-right: 1px solid @color-medium-grey; // TODO: Irena - fix to actual color
+                    border-right: 1px solid @color-medium-grey;
                 }
 
                 .card-content .side .data-wrapper {
@@ -774,7 +692,7 @@
 
                         &.front {
                             border-right: none;
-                            border-bottom: 1px solid @color-light-grey; // TODO: Irena - fix
+                            border-bottom: 1px solid @color-light-grey;
                         }
                     }
 
@@ -857,7 +775,7 @@
                 svg {
                     width: 24px;
                     height: 24px;
-                    fill: @color-medium-grey; // TODO: Irena - fix to actual color
+                    fill: @color-medium-grey;
                     @media(max-width: @screen-xs) {
                         width: 20px;
                         height: 20px;
@@ -866,7 +784,7 @@
             }
 
             .flip {
-                color: @color-medium-grey; // TODO: Irena - fix to actual color
+                color: @color-medium-grey;
                 position: absolute;
                 right: 10px;
                 bottom: 10px;
@@ -879,7 +797,7 @@
                     width: 16px;
                     height: 15px;
                     margin-right: 4px;
-                    fill: @color-medium-grey; // TODO: Irena - fix to actual color
+                    fill: @color-medium-grey;
                 }
             }
         }
