Fixed some colors to their .less defined variables

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -188,7 +188,7 @@
       min-height: 32px;
       max-width: 805px;
       border-radius: 4px;
-      background-color: #f0f0f0;
+      background-color: @color-light-grey;
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
       border: solid 0.5px @color-medium-grey;
       color: #000;
@@ -323,7 +323,7 @@
     border-radius: 50%;
   }
   button.btn {
-    background-color: #3293f6;
+    background-color: @color-blue;
     color: @color-white;
     width: 48px;
     height: 48px;
@@ -400,7 +400,7 @@
   margin-top: 48px;
   width: 616px;
   height: 48px;
-  background-color: #3293f6;
+  background-color: @color-blue;
   font-size: 16px;
   line-height: 1.35;
   letter-spacing: -0.4px;
