--- a/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
+++ b/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
@@ -7,7 +7,7 @@
     }
     .blue--text{
         font-size: 14px;
-        color: #3532d5!important;
+        color: @color-main-purple!important;
     }
     width: 280px;
     padding: 14px 0 18px;
