--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -42,7 +42,7 @@
     @media (max-width: @screen-xs) {top: 9px;}
 
     .icon {
-      color: #3532d5;
+      color: @color-main-purple;
       font-size: 16px;
     }
   }
@@ -258,7 +258,7 @@
     border-radius: 3px;
     font-size: 18px;
     color: white !important;
-    background-color: #bbbbbb !important;
+    background-color: @color-medium-grey !important;
     text-transform: none;
 
     @media (min-width: (@screen-xs+1)) {
