--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -23,7 +23,7 @@
 
         i {
           font-size: 16px;
-          color: #3532d5;
+          color: @color-main-purple;
         }
       }
     }
@@ -32,20 +32,20 @@
       font-weight: bold;
       letter-spacing: -0.5px;
       text-align: center;
-      color: #3532d5;
+      color: @color-main-purple;
     }
     p {
       font-size: 18px;
       letter-spacing: -0.3px;
       text-align: center;
-      color: #4a4a4a;
+      color: @color-grey;
       margin-top: 14px;
       margin-bottom: 18px;
       line-height: 1.5;
 
       b {
         font-weight: bold;
-        color: #3532d5;
+        color: @color-main-purple;
         display: block;
         margin-bottom: 4px;
       }
@@ -74,7 +74,7 @@
       }
     }
     .continue-btn {
-      background: #3532d5;
+      background: @color-main-purple;
       font-size: 18px;
       font-weight: bold;
       line-height: 1.39;
@@ -173,14 +173,14 @@
       line-height: normal;
       letter-spacing: -0.5px;
       text-align: center;
-      color: #4a4a4a;
+      color: @color-grey;
       max-width: 350px;
       margin: 0px auto;
 
     }
 
     .continue-btn {
-      background: #3532d5;
+      background: @color-main-purple;
       font-size: 18px;
       font-weight: bold;
       line-height: 1.39;
@@ -228,7 +228,7 @@
         color: #9b9b9b;
       }
       option {
-        color: #4a4a4a;
+        color: @color-grey;
         line-height: 36px;
       }
     }
@@ -256,7 +256,7 @@
       margin: 6px;
 
       &.highlighted {
-        background: #3532d5;
+        background: @color-main-purple;
         width: 16px;
         height: 16px;
       }
@@ -284,7 +284,7 @@
     }
 
     button {
-      color: #3293f6;
+      color: @color-blue;
     }
   }
 }
@@ -297,7 +297,7 @@
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
   font-size: 14px;
   letter-spacing: -0.2px;
-  color: #3532d5;
+  color: @color-main-purple;
   margin: 12px 0;
 
   i {
@@ -307,7 +307,7 @@
 }
 
 #app > .overlay.overlay--active:before {
-  background-color: #3532d5;
+  background-color: @color-main-purple;
   opacity: 0.76;
 }
 
