--- a/Cloudents.Web/ClientApp/components/satellite/header.less
+++ b/Cloudents.Web/ClientApp/components/satellite/header.less
@@ -64,7 +64,7 @@
     }*/
     .logo {
         margin-right: 40px;
-        fill: #3532D5;
+        fill: @color-main-purple;
 
         @media(max-width: @screen-sm) {
             width: 114px;
