--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -2,7 +2,7 @@
 
 .s-main-page {
     height: 100%;
-    background: #f0f0f0;
+    background: @color-light-grey;
     //background-image: linear-gradient(to top, #9ccdff, #f0f0f0);
     .responsive-property(font-size, 18px, null, 16px);
 
