--- a/Cloudents.Web/ClientApp/components/wallet/cashOutCard/cashOutCard.less
+++ b/Cloudents.Web/ClientApp/components/wallet/cashOutCard/cashOutCard.less
@@ -12,11 +12,11 @@
     border: 1px dashed #9b9b9b;
     .points {
       .num, .data .text {
-        color: #3532d5;
+        color: @color-main-purple;
       }
     }
     .redeem-btn {
-      background-color: #3532d5;
+      background-color: @color-main-purple;
     }
   }
   .data {
