--- a/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
@@ -24,7 +24,7 @@
             display: flex;
             align-items: stretch;
             text-transform: capitalize;
-            background: #bbbbbb;
+            background: @color-medium-grey;
             padding: 1px;
             border-radius: 0;
             box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2);
@@ -68,7 +68,7 @@
                     padding: 0 36px 24px 36px;
                 }
                 .mobile-button {
-                    background: #eeeeee;
+                    background: @Site-Background;
                     color: #9b9b9b;
                     width: 100%;
                     height: 48px;
@@ -150,7 +150,7 @@
                         }
                         .checkmark {
                             position: absolute;
-                            background: #bbbbbb;
+                            background: @color-medium-grey;
                             opacity: 0.8;
                             z-index: -1;
                             top: 15px;
