--- a/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
@@ -78,7 +78,7 @@
         }
 
         .mobile-button {
-            background: #eeeeee;
+            background: @Site-Background;
             color: #9b9b9b;
             width: 100%;
             height: 48px;
@@ -180,7 +180,7 @@
                 .checkmark {
                     width: 12px;
                     height: 12px;
-                    background: #bbbbbb;
+                    background: @color-medium-grey;
                     opacity: 0.8;
                 }
 
