--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -45,7 +45,7 @@
         font-size: 20px;
         line-height: 40px;
         border-radius: 4px;
-        background-color: #0455a8;
+        background-color: @color-dark-blue;
         box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
         color: @color-white;
         font-weight: bold;
