--- a/Cloudents.Web/ClientApp/components/profile/profile.less
+++ b/Cloudents.Web/ClientApp/components/profile/profile.less
@@ -74,7 +74,7 @@
                     &.active{
                         color:@color-main-purple;
                         border-color: @color-main-purple;
-                        background-color: #f0f0f0;
+                        background-color: @color-light-grey;
                     }
                 }
             }
@@ -105,7 +105,7 @@
 
     .tab-padding{
         .tabs__bar{
-            background-color: @color-white; border-top: solid 1px #bbbbbb;
+            background-color: @color-white; border-top: solid 1px @color-medium-grey;
             @media (max-width: @screen-xs) {
                 height: 64px;
                 font-size: 18px;
