--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -23,7 +23,7 @@
     //width: 105px;
     overflow: hidden;
     border-radius:4px 0 36px;
-    background-color: #f0f0f0;
+    background-color: @color-light-grey;
     border: solid 0.5px #dddddd;
     border-top: 0;
     border-left: 0;
@@ -71,7 +71,7 @@
 
         .sbf {
           font-size: 24px;
-          color: #bbbbbb;
+          color: @color-medium-grey;
         }
       }
     }
@@ -122,7 +122,7 @@
     word-wrap: break-word;
     letter-spacing: -0.3px;
     text-align: left;
-    color: #4a4a4a;
+    color: @color-grey;
     white-space: pre-wrap;
   }
 
@@ -214,7 +214,7 @@
     }
     .users {
       .avatar {
-        background: #4a4a4a;
+        background: @color-grey;
         width: 36px;
         height: 36px;
         float: right;
@@ -240,7 +240,7 @@
       line-height: 24px;
       .answer-btn {
         border-radius: 4px;
-        background-color: #0455a8;
+        background-color: @color-dark-blue;
         font-size: 14px;
         color: @color-white;
         padding: 0px 20px;
