--- a/Cloudents.Web/ClientApp/components/settings/searchItem.less
+++ b/Cloudents.Web/ClientApp/components/settings/searchItem.less
@@ -146,7 +146,7 @@
             border-radius: 4px;
             background: @color-light-grey;
             .responsive-property(min-height, 56px, null, 40px);
-            border: solid 1px #bbbbbb;
+            border: solid 1px @color-medium-grey;
             box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
             padding-top: 0;
             padding-bottom: 0;
@@ -502,7 +502,7 @@
                     }
 
                     .btn.btn--disabled:not(.btn--icon):not(.btn--flat) {
-                        background-color: #bbbbbb !important;
+                        background-color: @color-medium-grey !important;
                         color: white !important;
                     }
                 }
