--- a/Cloudents.Web/ClientApp/components/settings/view/settings.less
+++ b/Cloudents.Web/ClientApp/components/settings/view/settings.less
@@ -128,7 +128,7 @@
     border-radius: 3px;
     font-size: 18px;
     color: @color-white !important;
-    background-color: #bbbbbb;
+    background-color: @color-medium-grey;
     text-transform: none;
 
     @media (min-width: (@screen-xs+1)) {
