--- a/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
+++ b/Cloudents.Web/ClientApp/components/satellite/satellite-share.less
@@ -12,7 +12,8 @@
 
     .wrapper {
         max-width: 800px;
-        margin: 24px auto 0;
+        margin: 0 auto;
+        padding-top: 24px;
     }
 
     .image-section {
