--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -10,6 +10,12 @@
     max-width: @cellWidth;
     position: relative;
 
+  .top-block {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+  }
+
   p {
     margin: 16px 44px 16px 16px;
 
@@ -22,7 +28,7 @@
     height: 41px;
     //width: 105px;
     overflow: hidden;
-    border-radius:4px 0 36px;
+    border-radius:0 4px 0 36px;
     background-color: @color-light-grey;
     border: solid 0.5px #dddddd;
     border-top: 0;
