small bug fixes

--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -11,7 +11,7 @@
     background-color: @color-white;
   }
   .data-section {
-    min-height: 512px;
+    //min-height: 512px;
     background-color: @color-white;
 
     @media (min-width: @screen-xs) {
@@ -152,7 +152,8 @@
 
     }
     .wallet-table {
-      height: 344px;
+      height: 100%;
+      max-height: 344px;
       .table {
         thead {
           background-color: #f3f3ff;
@@ -320,8 +321,8 @@
   .cash-out {
     white-space: nowrap;
     .responsive-property(width, 456px, null, 350px);
-    position: absolute;
-    bottom: 26px;
+    //position: absolute;
+    //bottom: 26px;
     right: 0;
     margin-left: auto;
     margin-top: 16px;
@@ -338,6 +339,10 @@
     font-weight: bold;
     font-size: 20px;
     letter-spacing: -0.5px;
+    @media (max-width: @screen-xs) {
+      position: absolute;
+      bottom: 26px;
+    }
     .btn-wrap {
       //padding-right: 185px;
       .responsive-property(width, @table-width * 0.4, null, 100%);
