--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -68,18 +68,18 @@
     <link href="https://plus.google.com/116999550356569810034" rel="publisher" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="@cdnEndPoint/images/favIcons/favicon_115.png?v=2" />
-    <link rel="apple-touch-icon" sizes="57x57" href="@cdnEndPoint/images/favIcons/favicon_58.png?v=2">
-    <link rel="apple-touch-icon" sizes="60x60" href="@cdnEndPoint/images/favicons/favicon_61.png?v=2">
-    <link rel="apple-touch-icon" sizes="72x72" href="@cdnEndPoint/images/favicons/favicon_73.png?v=2">
-    <link rel="apple-touch-icon" sizes="76x76" href="@cdnEndPoint/images/favicons/favicon_77.png?v=2">
-    <link rel="apple-touch-icon" sizes="114x114" href="@cdnEndPoint/images/favicons/favicon_115.png?v=2">
-    <link rel="apple-touch-icon" sizes="120x120" href="@cdnEndPoint/images/favicons/favicon_121.png?v=2">
-    <link rel="apple-touch-icon" sizes="144x144" href="@cdnEndPoint/images/favicons/favicon_144.png?v=2">
-    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_33.png" sizes="32x32?v=2">
-    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_97.png" sizes="96x96?v=2">
-    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_17.png" sizes="16x16?v=2">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="@cdnEndPoint/images/favicons/favicon_145.png?v=2">
+    <link rel="apple-touch-icon" sizes="57x57" href="@cdnEndPoint/images/favIcons/favicon_58.png?v=2" />
+    <link rel="apple-touch-icon" sizes="60x60" href="@cdnEndPoint/images/favicons/favicon_61.png?v=2" />
+    <link rel="apple-touch-icon" sizes="72x72" href="@cdnEndPoint/images/favicons/favicon_73.png?v=2" />
+    <link rel="apple-touch-icon" sizes="76x76" href="@cdnEndPoint/images/favicons/favicon_77.png?v=2" />
+    <link rel="apple-touch-icon" sizes="114x114" href="@cdnEndPoint/images/favicons/favicon_115.png?v=2" />
+    <link rel="apple-touch-icon" sizes="120x120" href="@cdnEndPoint/images/favicons/favicon_121.png?v=2" />
+    <link rel="apple-touch-icon" sizes="144x144" href="@cdnEndPoint/images/favicons/favicon_144.png?v=2" />
+    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_33.png" sizes="32x32?v=2" />
+    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_97.png" sizes="96x96?v=2" />
+    <link rel="icon" type="image/png" href="@cdnEndPoint/images/favicons/favicon_17.png" sizes="16x16?v=2" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="@cdnEndPoint/images/favicons/favicon_145.png?v=2" />
     <link rel="SHORTCUT ICON" href="@cdnEndPoint/favicon.ico?v=2" />
     @Html.Raw(JavaScriptSnippet.FullScript)
 
@@ -152,7 +152,7 @@
         (function () {
             window.intercomSettings = {
                 app_id: "njmpgayv",
-                 hide_default_launcher:true
+                hide_default_launcher: true
             };
             var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', intercomSettings); } else {
                 var d = document; var i = function () { i.c(arguments) }; i.q = []; i.c = function (args) { i.q.push(args) }; w.Intercom = i; function l() {
@@ -175,7 +175,7 @@
     </script>
     <!-- End Inspectlet Embed Code -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
+    <script>
         window.version = '@version';
         window.publicPath = '@cdnEndPoint' + '/dist/';
     window.baseURL = '@Configuration["ApiEndpoint"]';
