--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -154,6 +154,7 @@
     .wallet-table {
       height: 100%;
       max-height: 344px;
+      text-transform: capitalize;
       .table {
         thead {
           background-color: #f3f3ff;
