--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -37,7 +37,7 @@
 
     color: #47586a;
     text-align: center;
-    padding-right: 26px;
+    padding-left: 26px;
     display: inline-block;
 
     span {
