--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -69,16 +69,10 @@
             margin-right: 8px;
         }*/
 
-        .show-btn {
-            pointer-events: none;
-            position: absolute;
-            .responsive-property(bottom, 14px, null, 6px);
-            .responsive-property(right, 16px, null, 8px);
-            padding: 3px 20px;
-            color: white;
-            border-radius: 4px;
-            font-size: 14px;
-        }
+      .show-btn {
+        pointer-events: none;
+        .cellActionBtnMixin();
+      }
 
         .cell-video,
        .cell{
