--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -136,6 +136,16 @@
   }
 }
 
+.cellActionBtnMixin(){
+  position: absolute;
+  .responsive-property(bottom, 14px, null, 6px);
+  .responsive-property(right, 16px, null, 8px);
+  padding: 3px 20px;
+  color: white;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
 .flexSameSize() {
   flex-grow: 0;
   flex-shrink: 0;
