login btn cross top 25 for small devices

--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -113,11 +113,11 @@
       color: @color-main-purple;
     }
   }
-
+// change for ios to fit the screen in case of need, will effect ALL small devices
   .chat-iframe iframe {
     @media (max-width: @screen-xs) {
-      min-height: ~"calc(100vh - 68px)";
-      max-height: ~"calc(100vh - 68px)";
+      min-height: ~"calc(100vh - 190px)";
+      max-height: ~"calc(100vh - 190px)";
     }
   }
 
