Small ui changes on the fly...

--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -310,7 +310,7 @@
 }
 
 #app > .overlay.overlay--active:before {
-  background-color: @color-main-purple;
-  opacity: 0.76;
+  background-color: #000000;
+  opacity: 0.6;
 }
 
