--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -34,6 +34,11 @@
     width: 100%;
     max-width: 304px;
     margin-left: 32px;
+    iframe {
+      box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+      border-radius: 4px;
+      max-height: 608px;
+    }
   }
   .md5 {
     margin-left: 17px;
