answer when not loged in toaste3r style

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -397,7 +397,7 @@
 }
 
 .snack__content {
-  margin-top: 48px;
+  margin-top: 24px;
   width: 616px;
   height: 48px;
   background-color: @color-blue;
@@ -425,5 +425,24 @@
   a{
     color: @color-white;
     text-decoration: underline;
+  }
+  a.toast_action{
+    height: 26px;
+    width: 60px;
+    border-radius: 26.5px;
+    border: solid 1px  @color-white;
+    font-size: 18px;
+    outline: none;
+    align-items: center;
+    justify-content: center;
+    color: @color-white;
+    letter-spacing: -0.5px;
+    padding: 0 20px;
+    min-width: 104px;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  span.toast-helper{
+    padding: 0 6px;
   }
 }
